force-app/main/default/objects/BEAT_Alert__c/BEAT_Alert__c.object-meta.xml
<CustomObject>
    <label>BEAT Alert</label>
    <nameField>
        <displayFormat>BA-{0000000000}</displayFormat>
        <label>BEAT Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BEAT Alerts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>