force-app/main/default/objects/BEAT_Alert__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Event Date</description>
    <formula>Event__r.StartDate</formula>
    <inlineHelpText>Date of the event</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>