force-app/main/default/objects/BEAT_Alert__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Used for ordering records on the display.</description>
    <inlineHelpText>Used for ordering records on the display.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>