force-app/main/default/objects/BEAT_Alert__c/listViews/Active_BEAT_Alerts.listView-meta.xml
<ListView>
    <fullName>Active_BEAT_Alerts</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Event__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active BEAT Alerts</label>
</ListView>